# SimpleHttpServer

./: .gitignore  CMakeLists.txt  README.md  build.cmd  build.sh
src/: App.cpp  CMakeLists.txt
